adding spring-cloud